objects/Coupon_Postage_Expense_Table__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Coupon Postage Expense Table for number of Coupons</description>
    <fields>
        <fullName>Estimated_Weight_oz__c</fullName>
        <description>Estimated postage weight based on number of coupons</description>
        <label>Estimated Weight (oz.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_of_Coupons__c</fullName>
        <description>Maximum Number of Coupons</description>
        <label>Maximum # of Coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_of_Coupons__c</fullName>
        <description>Minimum Number of Coupons for Postage</description>
        <label>Minimum # of Coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postage_Expense__c</fullName>
        <description>Amount for Postage</description>
        <label>Postage Expense</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <label>Coupon Postage Expense Table</label>
</CustomObject>